--- a/IMCcalc/src/main/webapp/WEB-INF/web.xml
+++ b/IMCcalc/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,17 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>IMCController</servlet-name>
+    <servlet-class>mvc.IMCController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  <servlet-name>IMCController</servlet-name>
+  <url-pattern>/imc</url-pattern>
+  </servlet-mapping>
+  
+  
+  
+
 </web-app>
